--- a/src/API.EC2/ProjectAPI/appsettings.json
+++ b/src/API.EC2/ProjectAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=productDb;Username=postgres;Password=mysecretpassword;Include Error Detail=true"
+  }
 }
