--- a/src/API.EC2/ProjectAPI/ProjectAPI.csproj
+++ b/src/API.EC2/ProjectAPI/ProjectAPI.csproj
@@ -5,6 +5,12 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+  <PropertyGroup>
+	<ContainerImageName>products-crud-api</ContainerImageName>
+	<ContainerImageTags>latest</ContainerImageTags>
+	<PublishProfile>DefaultContainer</PublishProfile>
+	<RuntimeIdentifier>linux-x64</RuntimeIdentifier>
+ </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
